[MON-306] refactor:  결제 시스템 리팩토링